deploy/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-startup-webhook
  namespace: kube-system
  labels:
    app: nodetaintshandler
spec:
  selector:
    app: nodetaintshandler
  ports:
    - name: https
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodetaintshandler
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodetaintshandler
  template:
    metadata:
      labels:
        app: nodetaintshandler
    spec:
      serviceAccountName: nodetaintshandler
      containers:
        - name: nodetaintshandler
          image: zhangchl007/nodetaintshandler:v1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
              name: webhook
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /readyz
              port: 8443
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: webhook-tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: webhook-tls
          secret:
            secretName: node-startup-webhook-tls
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: node-startup-taint
webhooks:
  - name: nodestartup.taint.add.nodetaintshandler.io
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Fail
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["nodes"]
    clientConfig:
      service:
        namespace: kube-system
        name: node-startup-webhook
        path: /mutate-node
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lVSXdpQ01XVUt0Z2dSQkU0K3AxTnVIRVozdG13d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lqRWdNQjRHQTFVRUF3d1hibTlrWlMxemRHRnlkSFZ3TFhkbFltaHZiMnN0WTJFd0hoY05NalV3T0RFMQpNVFF3TURFMVdoY05NelV3T0RFek1UUXdNREUxV2pBaU1TQXdIZ1lEVlFRRERCZHViMlJsTFhOMFlYSjBkWEF0CmQyVmlhRzl2YXkxallUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUpNYzVVbnEKcmRmOHZJQlo0RmlHdy9mYkRPZGV2MmZaNmZDR2NPcVdHeXlQQ0dPTkh6dzgzKzJaNjgxOTI1TVNtaU1SMENBaQpCWFZ1N0o0Nkg [...]
